<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="18dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toStartOf="@+id/movie_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_date"
            app:srcCompat="@drawable/ic_baseline_star_24"
            android:contentDescription="@string/star_icon" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="170dp"
            android:layout_height="202dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster"
            tools:text="Title" />

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="20-20-2020"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/movie_name"
            app:layout_constraintStart_toStartOf="@+id/movie_name"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <TextView
            android:id="@+id/movie_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="4.3"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        tools:text="Overview"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>