<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="Favorite"
        app:showAsAction="always"
        tools:ignore="HardcodedText" />
</menu>